--- a/HTML/12_07/12_07_display_table.html
+++ b/HTML/12_07/12_07_display_table.html
@@ -31,6 +31,10 @@
       text-align: center;
       padding: 10px;
     }
+    .price {
+      font-size: 0.9em;
+      font-weight: 700;
+    }
     /* 링크 가능 */
     .box .link {
       text-decoration-line:none;
@@ -49,33 +53,45 @@
   <div class="boxwarp">
     <!-- 첫 박스 하단 한 set -->
     <div class="box">
+      <a href="./12_07_Flexbox.html" class="link">
       <span class="thumb">
         <img src="/media/버클샌드.jpg" alt="샌들">
       </span>
       <strong class="title_item">여름 샌들</strong>
       <p class="desc_item">여름에 예쁘고 시원한 샌들</p>
+      <p class="price">20,000원</p>
+      </a>
     </div>
     <!-- 다른박스 시작지점 -->
     <div class="box">
+      <a href="./12_07_Flexbox.html" class="link">
       <span class="thumb">
         <img src="/media/슬리퍼.jpg" alt="슬리퍼">
       </span>
       <strong class="title_item">여름 슬리퍼</strong>
       <p class="desc_item">여름에 예쁘고 시원한 슬리퍼</p>
+      <p class="price">25,000원</p>
+      </a>
     </div>
     <div class="box">
+      <a href="./12_07_Flexbox.html" class="link">
       <span class="thumb">
         <img src="/media/스니커즈.jpg" alt="스니커즈">
       </span>
       <strong class="title_item">스니커즈</strong>
       <p class="desc_item">여름에 예쁘고 시원한 슬리퍼</p>
+      <p class="price">30,000원</p>
+      </a>
     </div>
     <div class="box">
+      <a href="./12_07_Flexbox.html" class="link">
       <span class="thumb">
         <img src="/media/슬리퍼2.jpg" alt="슬리퍼2">
       </span>
       <strong class="title_item">여름 슬리퍼</strong>
       <p class="desc_item">여름에 예쁘고 시원한 슬리퍼</p>
+      <p class="price">30,000원</p>
+      </a>
     </div>
   </div>
 </body>
