--- a/HTML/12_14/12_14_08.html
+++ b/HTML/12_14/12_14_08.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>기본 매개변수</title>
+  <link rel="stylesheet" href="/12_09/css/main.css">
 </head>
 <body>
-  
+  <script src="./js/12_14_08.js"></script>
 </body>
 </html>
