--- a/HTML/12_14/12_14_04.html
+++ b/HTML/12_14/12_14_04.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>익명함수 - 즉시 실행함수1</title>
+  <link rel="stylesheet" href="/12_09/css/main.css">
 </head>
 <body>
-  
+  <script src="./js/12_14_05.js"></script>
 </body>
 </html>
